# libclang-app

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
lib/: libclang.so.13  libncursesw.so.5.9
